<resources>
    <string name="app_name">Pack&amp;GO</string>
    <string name="firebase_login">Firebase Login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_out">Logout</string>
    <string name="login_with_facebook">login_with_facebook</string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="trips">Trips</string>
    <string name="todo">TODO</string>
    <string name="plus">+</string>
    <string name="name_and_surname">Name Surname</string>
    <string name="nametrip">nameTrip</string>
    <string name="days">days</string>
    <string name="add_new_trip">Add Trip</string>
    <string name="name_of_trip">Name of trip</string>
    <string name="number_of_days">Number of days</string>
    <string name="packing_list">Packing List</string>
    <string name="add_item">Add item</string>
    <string name="title_activity_packing_tabbed">PackingTabbedActivity</string>
    <string name="tab_text_1">Essentials</string>
    <string name="tab_text_2">Clothes</string>
    <string name="tab_text_3">Toiletries</string>
    <string name="tab_text_4">Others</string>
    <string name="select_a_category">Select a category:</string>

    <string-array name="categories">
        <item>Essentials</item>
        <item>Clothes</item>
        <item>Toiletries</item>
        <item>Others</item>
    </string-array>

    <string name="title_activity_tabbed_detail_trip">Tabbed_activity_detail_trip</string>
    <string name="my_notes">All Notes</string>
    <string name="note_text">Type note here..</string>
    <string name="note_title">Note Title</string>
    <string name="type_note_here">Type note here..</string>
    <string name="shopping_list">Shopping list</string>
    <string name="search_notes">Search notes</string>
    <string name="dash">-</string>
    <string name="day">day</string>
    <string name="pack_amp_go"><![CDATA[Pack & GO]]></string>
    <string name="nice_to_see_you_again">Nice to see you again!</string>
    <string name="search_trips">Search trips..</string>
    <string name="api_key">AIzaSyAApxCQwRHfIYUzucXNVOfOhCp0R6Dg83Y</string>
    <string name="more_options">More Options</string>
    <string name="pick_color">Pick Color</string>
    <string name="add_url">Add URL</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="add_image">Add Image</string>
    <string name="delete_note">Delete Note</string>
    <string name="are_you_sure_you_want_to_delete_this_note">Are you sure you want to delete this note?</string>
    <string name="add_calendar_event">Add Calendar Event</string>
    <string name="title">Title</string>
    <string name="place">Place</string>
    <string name="item">Item</string>
    <string name="all_items">All items</string>
    <string name="time">Time</string>
    <string name="not_set">not set</string>
    <string name="date">date</string>
    <string name="from">From</string>
    <string name="address">Address</string>
    <string name="add_place">Add</string>
    <string name="nearby_place">Nearby Place</string>
    <string name="select">Select</string>
    <string name="successfully">Signed In Successfully</string>
    <string name="failed">Signed In Failed</string>
    <string name="userAdded">user added</string>
    <string name="no_trips">No trips</string>
    <string name="DuringTheTrip">"During\nThe\nTrip"</string>
    <string name="AfterTrip">"After\nTrip"</string>
    <string name="_day">\nday</string>
    <string name="_days">\ndays</string>
    <string name="_hour">\nhour</string>
    <string name="_hours">\nhours</string>
    <string name="_minute">\nminute</string>
    <string name="_minutes">\nminutes</string>
    <string name="_second">\nsecond</string>
    <string name="_seconds">\nseconds</string>
    <string name="permissionDenied">Permission Denied!</string>
    <string name="addedLocation">"Added location"</string>
    <string name="no_places">No places</string>
    <string name="to">To</string>
    <string name="trip_name">TRIP NAME:</string>
    <string name="item_added">Item added</string>
    <string name="deleted_item">Deleted item</string>
    <string name="item_added_to_category">Item added to category </string>
    <string name="enter_name">Enter Name</string>
    <string name="select_category">Select category or enter name of item!</string>



</resources>
