<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/colorPrimaryDark"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imagexTrip"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryDark"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/nameTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"
            android:paddingBottom="30dp"
            android:text="@string/nametrip"
            android:textColor="#FFFFFF"
            android:textSize="25sp">

        </TextView>

        <!--        <TextView-->
        <!--            android:id="@+id/amount_days"-->
        <!--            android:layout_width="25dp"-->
        <!--            android:layout_height="25dp"-->
        <!--            android:padding="1dp"-->
        <!--            android:layout_marginHorizontal="5dp"-->
        <!--            android:layout_marginVertical="5dp"-->
        <!--            android:layout_alignParentBottom="true"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:gravity="center"-->
        <!--            android:text="@string/days"-->
        <!--            android:textColor="@color/colorPrimaryDark"-->
        <!--            android:textSize="15sp"-->
        <!--            android:background="@drawable/round_background"/>-->

        <TextView
            android:id="@+id/startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="5dp"
            android:layout_marginStart="20dp"
            android:text="@string/date"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/dash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_toEndOf="@+id/startDate"
            android:text="@string/dash"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginVertical="5dp"
            android:layout_toEndOf="@+id/dash"
            android:textColor="#FFFFFF"
            android:textSize="17sp" />


    </RelativeLayout>
</androidx.cardview.widget.CardView>