<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_note_layout"
    android:layout_width="match_parent"
    android:layout_height="75dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="12dp"
    android:layout_marginEnd="8dp"
    android:background="@drawable/background_item_amount">


    <TextView
        android:id="@+id/textDate"
        android:layout_width="40dp"
        android:layout_height="37.5dp"
        android:gravity="center"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableRow
        android:id="@+id/hr2"
        android:layout_width="36dp"
        android:layout_height="0.5dp"
        android:background="#15000000"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@id/textDate"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="40dp"
        android:layout_height="37.5dp"
        android:gravity="center"
        android:text="@string/not_set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textDate" />


    <ImageView
        android:id="@+id/imageLocation"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_location_on_30"
        app:layout_constraintLeft_toRightOf="@id/textDate"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/placeName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_bold"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:text="@string/place"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@id/imageLocation"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/addressName"
        android:layout_width="wrap_content"
        android:layout_height="30dp"

        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@null"
        android:ellipsize="end"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:text="address"
        android:textColor="@color/gray"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/imageLocation" />

    <ImageView
        android:id="@+id/clearPlace"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_clear_24"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TableRow
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginTop="49.5dp"
        android:background="#15000000"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>