<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddNewTrip">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="@dimen/margin_20"
            android:layout_height="@dimen/margin_20"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_10"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_back"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/textAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_17"
            android:layout_marginBottom="@dimen/margin_10"
            android:text="@string/add_new_trip"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_17"
            app:layout_constraintRight_toLeftOf="@id/saveTrip"
            app:layout_constraintLeft_toRightOf="@id/backBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/saveTrip"
            android:layout_width="@dimen/margin_30"
            android:layout_height="@dimen/margin_30"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_12"
            android:contentDescription="@string/app_name"
            android:padding="@dimen/padding_4"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_baseline_done_24"
            app:tint="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
        android:layout_width="@dimen/layout_300"
        android:layout_height="@dimen/layout_250"
        android:background="@drawable/people"
        android:layout_gravity="center"
        android:contentDescription="@string/app_name" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">


    <TextView
        android:layout_width="@dimen/layout_121"
        android:layout_height="@dimen/margin_30"
        android:layout_marginStart="@dimen/margin_11"
        android:gravity="center"
        android:layout_gravity="bottom"

        android:text="TRIP NAME: "


        android:textColor="@color/colorPrimaryDark" />


    <EditText
        android:id="@+id/editTripName"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_height="@dimen/margin_40"
        android:layout_marginStart="@dimen/margin_10"
        android:textSize="@dimen/text_13"
        android:autofillHints=""
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="Enter name ..."
        android:inputType="textShortMessage"
        android:lines="1"
        android:maxLines="1"
        android:textColorLink="@color/colorPrimary" />

</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setPlace"
            android:layout_width="@dimen/layout_120"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/place"
            app:icon="@drawable/ic_baseline_add_location_24" />

        <TextView
            android:id="@+id/placeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"

            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_23"
            android:textColor="@color/black"
            android:textSize="@dimen/text_13"
            tools:ignore="RtlSymmetry" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setDateTimeStart"
            android:layout_width="@dimen/layout_120"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/from"
            app:icon="@drawable/ic_baseline_calendar_today_24" />

        <TextView
            android:id="@+id/dataTimeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:paddingStart="@dimen/padding_23"
            android:textColor="@color/black"
            android:textSize="@dimen/text_13"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_2"
        android:orientation="horizontal"
        android:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setTimeStart"
            android:layout_width="@dimen/layout_120"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/to"
            app:icon="@drawable/ic_baseline_calendar_today_24" />

        <TextView
            android:id="@+id/timeStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/margin_10"
            android:paddingStart="@dimen/padding_23"
            android:textColor="@color/black"
            android:textSize="@dimen/text_13" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_35"
        android:layout_margin="@dimen/margin_10"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/margin_22"
            android:layout_height="@dimen/margin_22"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_image_24"
            app:tint="@color/colorPrimaryDark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_10"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/darkGrey"
            android:textSize="@dimen/text_13" />

    </LinearLayout>


</LinearLayout>